tests/reference/asr_preprocess-cpp_err3-a7ea818.stderr
C preprocessor error: Argument list is not closed with ')'
 --> tests/errors/cpp_err3.f90:1:2
  |
1 | program cpp_err3
  |  ^ 
